[package]
name = "notify-me"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.19"
dialoguer = "0.11.0"
env_logger = "0.11.5"
log = "0.4.22"
notify-rust = "4.11.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1.40.0", features = ["full"] }
